--- a/Project1/test.html
+++ b/Project1/test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Test Website</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>League of Legends</h1>
+<p>MOBA Game, welches viele Menschen spielen.</p>
 
 </body>
 </html>
