--- a/Project1/test.html
+++ b/Project1/test.html
@@ -7,6 +7,8 @@
 
 <h1>League of Legends</h1>
 <p>MOBA Game, welches viele Menschen spielen.</p>
+<a href="https://www.leagueoflegends.com">Website von League of Legends</a>
+
 
 </body>
 </html>
