--- a/Project1/test.html
+++ b/Project1/test.html
@@ -8,7 +8,9 @@
 <h1>League of Legends</h1>
 <p>MOBA Game, welches viele Menschen spielen.</p>
 <a href="https://www.leagueoflegends.com">Website von League of Legends</a>
-<img src='Bild1.jpg' alt='League of Legends' width="400" height="400"
+<p>
+    <img src='Bild1.jpg' alt='League of Legends' width="400" height="400">
+</p>
 
 
 </body>
