--- a/Project1/test.html
+++ b/Project1/test.html
@@ -8,9 +8,7 @@
 <h1>League of Legends</h1>
 <p>MOBA Game, welches viele Menschen spielen.</p>
 <a href="https://www.leagueoflegends.com">Website von League of Legends</a>
-<p>
-    <img src='Bild1.jpg' alt='League of Legends' width="400" height="400">
-</p>
+<p> <img src='Bild1.jpg' alt='League of Legends' width="1280" height="720">  </p>
 
 
 </body>
