--- a/Project1/test.html
+++ b/Project1/test.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--Browsertitel, welches auf dem Tab angezeigt wird. -->
 <title>Test Website</title>
 </head>
-<body>
+<body style="background-color:lightgray;text-align:center">
 
-<h1>League of Legends</h1>
-<p>MOBA Game, welches viele Menschen spielen.</p>
-<a href="https://www.leagueoflegends.com">Website von League of Legends</a>
-<p> <img src='Bild1.jpg' alt='League of Legends' width="400" height="280">  </p>
+    <!-- Überschrift -->
+<h1 style="font-size:300%;font-family: sans-serif;background-color: lime;text-align:center;border:2px solid tomato">League of Legends</h1>
+    <!-- Text -->
+<p style="font-family: 'Times New Roman', Times, serif;text-align:center"><b>MOBA</b> Game, welches viele Menschen spielen.</p>
+    <!-- Link zu einer anderen Website -->
+<p style="text-align:center"><a href="https://www.leagueoflegends.com"><i>Website von League of Legends</i></a></p>
+    <!-- Bild mit Informationstext und alternativen Text, falls das Bild nicht laden kann. -->
+<p style="border:2px solid blue" title="Jinx VS Vi"> <img src='Bild1.jpg' alt='League of Legends' width="400" height="280">  </p>
+    <!-- Button ohne Funktion -->
 <button> STILL THE MAIN </button>
 
+    <!-- Auflistung mit Farben -->
+<ul>
+    <li style="color:red">Darius</li>
+    <li style="color:blue">Irelia</li>
+    <li style="color:white">Garen</li>
+    <li style="color:green">Ashe</li>
+</ul>
+    <!-- Text mit Informationstext -->
+<p title="Fun Fact"><mark>Udyr ist <del>useless</del> broken AF.</mark></p>
+
+
+    <!-- Addressat oder sowas, steht am Ende in italic oder so -->
+<address>
+    Geschrieben von Dominik Schäfer. <br>
+    Goethestraße 30<br>
+    78647 Trossingen<br>
+    Deutschland
+</address>
 </body>
 </html>
